# taproot-assets-rest-gateway

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  setup.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  integration.yml
docs/: API.md  TROUBLESHOOTING.md
itest/: Dockerfile.tapd  README.md  docker-compose.yml  run.sh
scripts/: find-macaroons.sh
src/: config.rs  connection_pool.rs  crypto.rs  database.rs  error.rs  lib.rs  main.rs  middleware.rs  monitoring.rs  types.rs
src/api/: addresses.rs  assets.rs  burn.rs  channels.rs  events.rs  health.rs  info.rs  mailbox.rs  mailbox_auth.rs  mod.rs  proofs.rs  rfq.rs  routes.rs  send.rs  stop.rs  universe.rs  wallet.rs
src/tests/: setup.rs  test_utils.rs
src/websocket/: connection_manager.rs  correlation.rs  mod.rs  proxy_handler.rs
tests/: README.md  addresses.rs  asset_creation.rs  asset_listing_balance.rs  assets.rs  benchmarks.rs  burn.rs  channels.rs  edge_cases.rs  error_handling.rs  events.rs  health.rs  info.rs  integration_scenarios.rs  mailbox.rs  mint_workflow.rs  performance.rs  proofs.rs  psbt.rs  rfq.rs  send.rs  setup_configuration.rs  stop_daemon.rs  transfers.rs  ui_specific.rs  universe.rs  universe_integration.rs  wallet.rs
