[package]
name = "taproot-assets-rest-gateway"
version = "0.0.1"
edition = "2021"
description = "REST API proxy for Lightning Labs' Taproot Assets"
readme = "README.md"
repository = "https://github.com/privkeyio/taproot-assets-rest-gateway"
license = "MIT"
keywords = ["taproot", "assets", "lightning", "bitcoin", "proxy"]
categories = ["bitcoin", "lightning", "taproot", "rust", "api-bindings", "cryptography::cryptocurrencies", "web-programming"]
exclude = [
    ".github/",
    "tests/",
    ".env*",
    "*.log",
    "target/",
]

[dependencies]
reqwest = { version = "0.12.22", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
dotenv = "0.15.0"
actix-web = "4.11.0"
actix-rt = "2.10.0"
actix-http = "3.11.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
thiserror = "2.0.12"
uuid = { version = "1.17.0", features = ["v4"] }
chrono = "0.4.41"
futures = "0.3.31"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
lazy_static = "1.5.0"
urlencoding = "2.1.3"
base64 = "0.22.1"
serial_test = "3.2.0"
actix-cors = "0.7.1"
sysinfo = "0.35.2"
actix-ws = "0.3"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
native-tls = "0.2"
futures-util = "0.3"
